crates/cli/tests/snapshots/task_test__task__can_show_internal.snap
---
source: crates/cli/tests/task_test.rs
expression: assert.output_standardized()
---
About ──────────────────────────────────────────────────────

  Target: tasks:internal
  Project: tasks
  Task: internal
  Toolchain: system
  Type: test
  Mode: internal
  Depends on: —

Process ────────────────────────────────────────────────────

  Command: build
  Environment variables: —
  Runs dependencies: Parallel
  Runs in CI: Yes

Configuration ──────────────────────────────────────────────

  Tags: —
  Inputs:
    - .moon/*.{yml,yaml,jsonc,json,pkl,hcl,toml}
    - tasks/**/*
  Outputs: —
