crates/cli/tests/snapshots/task_test__task__shows_inputs.snap
---
source: crates/cli/tests/task_test.rs
expression: assert.output_standardized()
---
About ──────────────────────────────────────────────────────

  Target: tasks:test
  Project: tasks
  Task: test
  Toolchain: system
  Type: test
  Depends on: —

Process ────────────────────────────────────────────────────

  Command: jest --cache --color
  Environment variables: —
  Runs dependencies: Parallel
  Runs in CI: Yes

Configuration ──────────────────────────────────────────────

  Tags:
    - quality
    - test
  Inputs:
    - .moon/*.{yml,yaml,jsonc,json,pkl,hcl,toml}
    - tasks/tests/**/*
  Outputs: —
