crates/cli/tests/snapshots/task_test__task__shows_outputs.snap
---
source: crates/cli/tests/task_test.rs
expression: assert.output_standardized()
---
About ──────────────────────────────────────────────────────

  Target: tasks:lint
  Project: tasks
  Task: lint
  Toolchain: system
  Type: build
  Depends on: —

Process ────────────────────────────────────────────────────

  Command: eslint --cache --report-unused-disable-directives
  Environment variables: —
  Runs dependencies: Parallel
  Runs in CI: Yes

Configuration ──────────────────────────────────────────────

  Tags:
    - quality
    - lint
  Inputs:
    - .moon/*.{yml,yaml,jsonc,json,pkl,hcl,toml}
    - tasks/**/*
  Outputs:
    - tasks/cache
